<resources>
    <string name="app_name">PeriodKeeper</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello Densy!</string>
    <string name="perioid_last">Your Last Period</string>
    <string name="perioid_future">Your Predicted Period</string>
    <string name="days_past">Days Past Since Last Period</string>
    <string name="enter_period">Enter Period</string>
    <string name="today_period">Started Today</string>
    <string name="add_period">Add Period</string>

</resources>
