<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeFragment"
    android:background="@drawable/period_fragment_gradient_bg">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/hello"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/lastPeriodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/perioid_last"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lastPeriodDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/lastPeriodTitle"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_slab_bold"
        tools:text="17.05.1997"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/daysPastTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/lastPeriodDate"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/days_past"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/daysPast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/daysPastTitle"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_slab_bold"
        tools:text="17"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/futurePeriodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/daysPast"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/perioid_last"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/futurePeriodDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/futurePeriodTitle"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_slab_bold"
        tools:text="17.05.1997"
        android:textSize="18sp" />


</androidx.constraintlayout.widget.ConstraintLayout>